--- a/app/views/apps/_wip_odart_130519/views/beis/reporting/standard.html
+++ b/app/views/apps/_wip_odart_130519/views/beis/reporting/standard.html
@@ -1,6 +1,6 @@
 {% extends "layout-subapp.html" %}
 {% block content %}
-<section id="viewID" data-page-name="biesReporting">
+<section id="viewID" data-page-name="biesReportingStandard">
 
 <div class="govuk-grid-row">
 <aside class="govuk-grid-column-one-third aside">
