--- a/app/views/apps/_wip_odart_130519/views/index.html
+++ b/app/views/apps/_wip_odart_130519/views/index.html
@@ -5,6 +5,15 @@
 
 <section id="viewID" data-page-name="odartLanding">
   <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <div class="gem-c-organisation-logo brand--department-for-business-innovation-skills">
+        <div class="gem-c-organisation-logo__container gem-c-organisation-logo__crest gem-c-organisation-logo__crest--single-identity brand__border-color">
+          <span class="gem-c-organisation-logo__name">Department for<br>Business, Energy<br>&amp; Industrial Strategy</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
         <h1 class="govuk-heading-xl">
@@ -24,20 +33,20 @@
 
    </div>
    <div class="govuk-grid-row">
-     <div class="govuk-grid-column-full">
+     <div class="govuk-grid-column-one-half">
               <h3 class="govuk-heading-m">Sign in</h3>
              <form>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="email">
                 Email address
                 </label>
-                <input class="govuk-input govuk-!-width-one-half" id="email" name="email" type="text">
+                <input class="govuk-input govuk-!-width-two-thirds" id="email" name="email" type="text">
               </div>
               <div class="govuk-form-group">
                 <label class="govuk-label" for="password">
                 Password
                 </label>
-                <input class="govuk-input govuk-!-width-one-half" id="password" name="password" type="text">
+                <input class="govuk-input govuk-!-width-two-thirds" id="password" name="password" type="text">
               </div>
              <div class="govuk-form-group">
              <button class="govuk-button">Sign in</button>
@@ -45,11 +54,17 @@
              </form>
              <h2 class="govuk-heading-s">Problems signing in?</h2>
              <ul class="govuk-list govuk-list--links">
-             <li><a href="#">Forgotten your password?</a>
-             </li>
-             <li><a href="#">Reset your password?</a>
-             </li>
+             <li><a href="#">Forgotten your password?</a></li>
+             <li><a href="#">Reset your password?</a></li>
              </ul>
+         </div>
+     <div class="govuk-grid-column-one-half">
+              <h3 class="govuk-heading-m">Register</h3>
+              <div class="govuk-inset-text">
+              <p class="govuk-body">This service is available by invite only. Please speak to your line manager to arrange access.</p>
+              <p class="govuk-body">OR</p>
+              <p class="govuk-body">Contact the BEIS service helpdesk for further assistance.</p>
+              </div>
          </div>
        </div>
 
