--- a/app/views/apps/_wip_odart_130519/views/partner/trackers/submit/start.html
+++ b/app/views/apps/_wip_odart_130519/views/partner/trackers/submit/start.html
@@ -2,42 +2,40 @@
 
 {% block content %}
 
-<div class="govuk-width-container" data-page-name="trackerSubmitJourneyLogic">
+<section class="govuk-width-container" data-page-name="partnerTrackerStart">
   <a href="#" class="govuk-back-link">Back</a>
+  <main class="govuk-main-wrapper " id="main-content" role="main">
 
+<div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+        <h1 class="govuk-heading-xl">Submit ODA financial data</h1>
+          <p class="govuk-body-lead">Use this service to report your ODA financial data to BEIS.</p>
+        <h2 class="govuk-heading-m">Before you start</h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>make </li>
+          <ul>
+            <li>cash figures</li>
+            <li>cash forecast for the next quarter</li>
+            <li>accrual for the next quarter</li>
+            </ul>
+        </ul>
 
-  <h1 class="govuk-heading-l">Choose how to submit financial data?</h1>
+        <h2 class="govuk-heading-m">What you need</h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>have the activity data you need to report on:</li>
+          <ul>
+            <li>cash figures</li>
+            <li>cash forecast for the next quarter</li>
+            <li>accrual for the next quarter</li>
+            </ul>
+        </ul>
 
-
-            <form>
-            <fieldset class="govuk-fieldset">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                <h1 class="govuk-heading-m">
-                  Choose an option
-                </h1>
-              </legend>
-              <div class="govuk-radios">
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-1" name="choose-journey" type="radio" value="upload">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-1">
-                    upload a completed financial tracker spreadsheet
-                  </label> </div>
-                <div class="govuk-radios__item">
-                  <input class="govuk-radios__input" id="where-do-you-live-2" name="choose-journey" type="radio" value="online">
-                  <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                    online submission service
-                  </label> </div>
-
-              </div>
-            </fieldset>
-            </form>
-            <br />
-            <br />
-            <div class="govuk-form-group">
-            <a href="file-upload/start.html" class="govuk-button">Continue</a>
-            </div>
-
+        <a href="input.html" class="govuk-button govuk-button--start">Start</a>
         </div>
+  </div>
+
+        </main>
+</section>
 
 
 {% endblock %}
