--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -5,16 +5,23 @@
   <script src="{{scriptUrl}}"></script>
 {% endfor %}
 <script src="https://d3js.org/d3.v4.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.js" type="text/javascript"></script>
+<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.18/c3.min.js" type="text/javascript"></script> -->
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jexcel/2.0.0/js/jquery.jexcel.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jexcel/2.0.0/js/jquery.jdropdown.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handsontable/7.0.3/handsontable.full.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/handsontable@7.0.3/dist/handsontable.full.min.css" rel="stylesheet" media="screen">
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/js/standalone/selectize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tabletop.js/1.5.2/tabletop.min.js"></script>
 <script src="public/javascripts{{ currentApp.urlPaths.scriptsPath + currentApp.config.jsFile | d('sub-application.js') }}" charset="utf-8"></script>
+<script src="public/javascripts{{ currentApp.urlPaths.scriptsPath + currentApp.config.accordion | d('service-manual_accordion.js') }}" charset="utf-8"></script>
 
 {% if useAutoStoreData %}
   <script src="/public/javascripts/auto-store-data.js"></script>
