--- a/app/views/apps/_assessment_2205/views/beis/trackers/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/index.html
@@ -69,13 +69,13 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-one-third">
        <div class="panel-blue">
-          <div class="govuk-caption-m">Trackers submitted</div>
+          <div class="govuk-caption-m">Trackers submitted this period</div>
           <div class="govuk-heading-l"><span>34</span> of <span>36</span></div>
        </div>
      </div>
      <div class="govuk-grid-column-one-third">
         <div class="panel-blue">
-        <div class="govuk-caption-m">Total spend</div>
+        <div class="govuk-caption-m">Total spend this period</div>
         <div class="govuk-heading-l">£15,590,000</div>
         </div>
       </div>
@@ -90,7 +90,7 @@
          <div class="govuk-grid-column-full">
          <br>
          <br>
-   <table class="govuk-table" id="trackerReviewTable">
+   <table class="govuk-table govuk-table--small" id="trackerReviewTable">
 
      <thead class="govuk-table__head">
        <tr class="govuk-table__row">
