--- a/app/views/apps/_assessment_2205/views/index.html
+++ b/app/views/apps/_assessment_2205/views/index.html
@@ -19,13 +19,13 @@
         <h1 class="govuk-heading-xl">
           Report on ODA activity and financial data<span class="sr-only">(ROODAAF)</span>
               </h1>
-  <p>This service is for organisations that either receive or report ODA funding.</p>
+  <p>This service is for organisations that either receive or report ODA for DfID.</p>
   <p>Use this service to:</p>
 
           <ul class="govuk-list govuk-list--bullet">
-              <li>report cash and accrual spend on activites</li>
-              <li>report forecasted cash and accrual spend on activites</li>
-              <li>manage projects and their activities</li>
+              <li>manage activity information you report against</li>
+              <li>report cash and accrual spend on activities</li>
+              <li>report forecasted cash and accrual spend on activities</li>
               <!--<li>your Companies House number - <a href="https://beta.companieshouse.gov.uk/search/" rel="external">find my Companies House number</a></li>-->
           </ul>
       </div>
