--- a/app/views/apps/_assessment_2205/views/partner/dashboard.html
+++ b/app/views/apps/_assessment_2205/views/partner/dashboard.html
@@ -4,8 +4,8 @@
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
-            <h1 class="govuk-heading-xl">Home</h1>
-            <p class="govuk-body-lead">Use this page to navigate towards tasks you need to complete.</p>
+            <h1 class="govuk-heading-xl">Report on ODA activity and financial data</h1>
+            <!-- <p class="govuk-body-lead">Use this page to navigate towards tasks you need to complete.</p> -->
           </div>
     </div>
 
@@ -13,10 +13,10 @@
    <div class="govuk-grid-row">
      <div class="govuk-grid-column-two-thirds">
 
-      <h2 class="govuk-heading-l"><a href="trackers/">Financial data</a></h2>
+      <h2 class="govuk-heading-m"><a href="trackers/">Financial data</a></h2>
       <p class="govuk-body">Update and report your ODA financial data.</p>
 
-     <h2 class="govuk-heading-l"><a href="projects/">Activities</a></h2>
+     <h2 class="govuk-heading-m"><a href="projects/">Activities</a></h2>
      <p class="govuk-body">Create, read or update your activities.</p>
      <details class="govuk-details">
       <summary class="govuk-details__summary">
@@ -36,8 +36,12 @@
 
      <h3 class="govuk-heading-m">Administration</h3>
      <ul class="govuk-list govuk-list--links">
-               <li><a href="#">Manage users</a></li>
-               <li><a href="#">Your user account settings</a></li>
+               <li><a href="#">Manage users</a>
+                 <p class="govuk-body">Invite new people, update people's permissions and remove people no longer in your team.</p>
+               </li>
+               <li><a href="#">Your user account settings</a>
+                 <p class="govuk-body">Update your password, email and notification settings.</p>
+               </li>
      </ul>
 
      </div>
