--- a/app/views/apps/_assessment_2205/views/partner/trackers/index.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/index.html
@@ -8,7 +8,7 @@
   <main class="govuk-main-wrapper">
     <h1 class="govuk-heading-xl">Financial data</h1>
     <p class="govuk-body-lead">View previous financial submissions and update this period's financial data.</p>
-    <a class="govuk-button" href="submit/input.html">Report financial data</a>
+    <a class="govuk-button" href="submit/choose-option.html">Report financial data</a>
     <a class="govuk-button govuk-button--link" href="../projects/">View activities</a>
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
