--- a/app/views/apps/_assessment_2205/views/partner/trackers/submit/start.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/submit/start.html
@@ -8,14 +8,19 @@
 
 <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl">Update activity financial data</h1>
-          <p class="govuk-body-lead">Use this service to report your ODA financial data to BEIS.</p>
-        <p class="govuk-body">change me</p>
-        <h3 class="govuk-heading-l">What you need</h3>
+        <h1 class="govuk-heading-xl">Report financial data</h1>
+
+        <h3 class="govuk-heading-l">What you need:</h3>
         <ul class="govuk-list govuk-list--bullet">
-          <li>
-        <p class="govuk-body">programme data activity information, speak to your Programme Manager if an activity is not listed.</p>
-        </li>
+          <li>all activities you wish to report on must already appear in the <a href="#">activities</a> list.
+            <ul><li>Ask a <a href="#">colleague with activity management permissions</a> to add these for you.</li></ul></li>
+          <li>Actual cash and accrual figures for:
+            <ul>
+              <li>this quarter</li>
+              <li>next quarter</li>
+            </ul>
+          </li>
+          <li>Forecast cash and accrual figures for each quarter an activity is projected to run for.</li>
         </ul>
 
         <a href="input.html" class="govuk-button govuk-button--start">Start</a>
