--- a/app/views/apps/_assessment_2205/views/beis/dashboard.html
+++ b/app/views/apps/_assessment_2205/views/beis/dashboard.html
@@ -4,8 +4,8 @@
   <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
           <div class="hgroup">
-            <h1 class="govuk-heading-xl">Home</h1>
-            <p class="govuk-body">Use this page to navigate towards tasks you need to complete.</p>
+            <h1 class="govuk-heading-xl">Report on ODA activity and financial data</h1>
+            <!-- <p class="govuk-body">Use this page to navigate towards tasks you need to complete.</p> -->
           </div>
     </div>
    </div>
