--- a/app/views/includes/account-navigation.html
+++ b/app/views/includes/account-navigation.html
@@ -49,7 +49,7 @@
 		<nav id="global-nav" class="global-nav">
 			<ul id="global-nav-links">
 				<li class="home"><a href="{{ currentApp.urlPaths.appRootView }}beis/dashboard">Home</a></li>
-				<li class="finance"><a href="{{ currentApp.urlPaths.appRootView }}beis/activities">Activities</a></li>
+				<!-- <li class="finance"><a href="{{ currentApp.urlPaths.appRootView }}beis/activities">Activities</a></li> -->
 				<li class="apprentices"><a href="{{ currentApp.urlPaths.appRootView }}beis/trackers">Trackers</a></li>
 				<li class="team"><a href="{{ currentApp.urlPaths.appRootView }}beis/reporting">Reporting</a></li>
 				<!--<li class="organisations"><a href="/sprint/48/account/organisations/index">SFA agreements</a></li>-->
@@ -66,9 +66,9 @@
 		<nav id="global-nav" class="global-nav">
 			<ul id="global-nav-links">
 				<li class="home"><a href="{{ currentApp.urlPaths.appRootView }}partner/dashboard">Home</a></li>
-				<li class="finance"><a href="{{ currentApp.urlPaths.appRootView }}partner/activities">Activities</a></li>
-				<li class="apprentices"><a href="{{ currentApp.urlPaths.appRootView }}partner/trackers">Trackers</a></li>
-				<li class="team"><a href="{{ currentApp.urlPaths.appRootView }}partner/reporting">Reporting</a></li>
+				<li class="apprentices"><a href="{{ currentApp.urlPaths.appRootView }}partner/trackers">Financial data</a></li>
+				<li class="finance"><a href="{{ currentApp.urlPaths.appRootView }}partner/projects">Activities</a></li>
+				<!-- <li class="team"><a href="{{ currentApp.urlPaths.appRootView }}partner/reporting">Reporting</a></li> -->
 				<!--<li class="organisations"><a href="/sprint/48/account/organisations/index">SFA agreements</a></li>-->
 				<!--<li ><a href="/sprint/48/account/paye/index">PAYE schemes</a></li>-->
 			</ul>
