made a fix to type case of subapp in tempalte

--- a/app/views/apps/_assessment_2205/views/partner/trackers/submit/submit-tracker.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/submit/submit-tracker.html
@@ -1,4 +1,4 @@
-{% extends "layout-subApp.html" %}
+{% extends "layout-subapp.html" %}
 
 {% block content %}
 <section id="viewID" data-page-name="partnerSubmitTracker">
