--- a/app/views/apps/_assessment_2205/views/partner/trackers/submit/file-upload/start.html
+++ b/app/views/apps/_assessment_2205/views/partner/trackers/submit/file-upload/start.html
@@ -1,4 +1,4 @@
-{% extends "layout-subApp.html" %}
+{% extends "layout-subapp.html" %}
 
 {% block content %}
 <section class="govuk-width-container" data-page-name="trackerSubmitJourneyLogic">
