updates to review actvities

--- a/app/views/apps/_assessment_2205/views/beis/reporting/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/reporting/index.html
@@ -18,7 +18,7 @@
         </thead>
         <tbody class="govuk-table__body">
           <tr class="govuk-table__row">
-            <td class="govuk-table__header" scope="row">IATI transparency report</td>
+            <td class="govuk-table__header" scope="row"><abbr title="International Aid Transparency Initiative">IATI</abbr> transparency report</td>
             <td class="govuk-table__cell">24 May 2019</td>
             <td class="govuk-table__cell"><a href="https://beis-odart-alpha-transparency.herokuapp.com/">Open</a></td>
           </tr>
