--- a/app/views/apps/_assessment_2205/views/beis/trackers/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/index.html
@@ -3,7 +3,7 @@
 <section id="viewID" data-page-name="beisTrackerDashboard">
 <br />
 <br />
-  <div class="govuk-panel govuk-panel--confirmation">
+  <div class="govuk-panel govuk-panel--confirmation hide">
         <h1 class="govuk-panel__title">
           Tracker sent to BEIS analyst for QA.
         </h1>
