--- a/app/views/apps/_assessment_2205/assets/sass/sub-application.scss
+++ b/app/views/apps/_assessment_2205/assets/sass/sub-application.scss
@@ -14,6 +14,7 @@ $govuk-grey-3: #dee0e2;
 $govuk-grey-4: #f8f8f8;
 $govuk-black: #0b0c0c;
 $govuk-purple: #8B2780;
+$govuk-pink: #d53880;
 //
 // imports
 //
@@ -239,13 +240,25 @@ header {
     font-weight: 900;
   }
 }
-.govuk-warning__cell {
-box-shadow: -10px 0px 0px 0px mix($govuk-white,$govuk-purple,90%), -15px 0px 0px 0px $govuk-purple;
-background: mix($govuk-white,$govuk-purple,90%);
+.govuk-under__cell {
+  // border-left: 5px solid $govuk-red;
+  box-shadow:-10px 0px 0px 0px mix($govuk-white,$govuk-purple,90%), -15px 0px 0px 0px $govuk-purple;
+  // border-right: 5px solid $govuk-white;
+  background: mix($govuk-white,$govuk-purple,90%);
+  padding-left: 0px;
+  white-space: nowrap;
+  div {
+    color: $govuk-purple;
+    font-weight: 900;
+  }
+}
+.govuk-over__cell {
+box-shadow: -10px 0px 0px 0px mix($govuk-white,$govuk-pink,90%), -15px 0px 0px 0px $govuk-pink;
+background: mix($govuk-white,$govuk-pink,90%);
 padding-left: 0px;
 white-space: nowrap;
   div {
-    color: $govuk-purple;
+    color: $govuk-pink;
     font-weight: 900;
   }
 }
