making journeys work better

--- a/app/views/apps/_assessment_2205/views/beis/trackers/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/index.html
@@ -3,12 +3,12 @@
 <section id="viewID" data-page-name="beisTrackerDashboard">
 <br />
 <br />
-  <div class="govuk-panel govuk-panel--confirmation hide">
+  <div class="govuk-panel govuk-panel--confirmation hide" id="sentToBeis">
         <h1 class="govuk-panel__title">
-          Tracker sent to BEIS analyst for QA.
+          Academy of Medical Sciences
         </h1>
         <div class="govuk-panel__body">
-          Academy of Medical Sciences
+          Financial tracker sent to BEIS analyst for QA.
         </div>
       </div>
 
