--- a/app/views/apps/_assessment_2205/views/beis/trackers/tracker/complete-review.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/tracker/complete-review.html
@@ -25,22 +25,19 @@
             <label class="govuk-label govuk-radios__label" for="decline">
               no, send the tracker back to the delivery partner to fix
             </label> </div>
-          <div class="govuk-radios__conditional -govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional-2">
+          <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-how-contacted-conditional-2">
             <div class="govuk-form-group">
             <div class="word-count">
               <label class="govuk-label" for="contact-by-phone">
                 Add feedback
               </label>            <textarea class="govuk-textarea govuk-!-width-one-half" type="text" id="wordlimit" data-max-length-in-words="50"></textarea>
-                <span class="sfa-form-control-after" id="#charlimit">
-                    <span class="words-left govuk-body">50 words left</span>
-                </span>
             </div>
             </div>
           </div>
         </div>
     <br>
     <br>
-        <a href="#" class="govuk-button">Finish</a>
+        <a href="../index?state=reviewed"" class="govuk-button">Finish</a>
       </fieldset>
     </div>
 
