--- a/app/views/apps/_assessment_2205/views/beis/trackers/tracker/index.html
+++ b/app/views/apps/_assessment_2205/views/beis/trackers/tracker/index.html
@@ -7,11 +7,7 @@
     <a href="#" class="govuk-back-link">Back to all trackers</a>
 
     <h3 class="govuk-heading-s">Tracker actions</h3>
-    <ul class="govuk-list govuk-list--bullet">
-          <li><a href="#1" class="govuk-link">Return to delivery partner</a></li>
-          <li><a href="#1" class="govuk-link">Add notes</a></li>
-
-      </ul>
+    <a href="complete-review" href="#1" class="govuk-button govuk-button--secondary">Return to delivery partner</a>
 <a href="complete-review" class="govuk-button">Complete review</a>
 
     <div class="related">
